                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.3.1

  *) [TS-1543] Enable non-debug logging for rfc5861 plugin

  *) [TS-1512] get volume & hosting work with cluster

  *) [TS-1542] Fix so that rfc5861 plugin will compile against older versions of TS

  *) [TS-1446] Make sure age header is enabled in rfc5861 plugin

  *) [TS-1539] Update build package list in README

  *) [TS-1535] FetchSM process_fetch_write should ignore event TS_EVENT_VCONN_WRITE_READY

  *) [TS-1534] implement the interim cache for ESI parser result

  *) [TS-1501] vc`s inactivity_timeout event should be schedule in vc`s thread

  *) [TS-1503] make Event::schedule simple and efficient
     Author: KuoTai

  *) [TS-1532] make esi plugin support cookie sub keys

  *) [TS-1526] SNI support breaks IP-based lookup

  *) [TS-1513] SPDY plugin crashes on connection close

  *) [TS-1516] use_client_addr breaks parent proxy configuration
     Author: Uri Shachar.

  *) [TS-1518] detect header_rewrite plugin boost dependency

  *) [TS-1003] make Prefetch config file reloadable

  *) [TS-1462] SPDY proxy plugin

  *) [TS-1488] Check the event`s cancel flag before put it into the PriorityEventQueue.
     Author: KuoTai.

  *) [TS-1484] Fix SNI crashes where there is no default certificate

  *) [TS-1473] Fix header_filter plugin for ARM.

  *) [TS-1457] Change chunking output to avoid massive memory use by transforms.

  *) [TS-1469] Manager uses hardcoded FD limit causing restarts
      forever on traffic_server. Reported By: Thomas Jackson

  *) [TS-1466] disable ssl compression by default

  *) [TS-1464] mark ink_assert with the noreturn attribute

  *) [TS-1458] fix LuaJIT include ordering

  *) [TS-1454] crash when ic_hostname is null in cluster mode

  *) [TS-1270] add force local cache control in clustering mode

  *) [TS-1386] thread hang in cluster type=1, which will trigger the
     throttling
